complete solar system scenario